# GestureCV

./: CMakeLists.txt  ChangeLog  HandGesture.cpp  NOTICE  README.md  build.sh  make
dat/: 0.xml  1.xml  2.xml  3.xml  4.xml  5.xml  6.xml  8.xml  9.xml  BinaryFilter.xml  CvRGBCamera.xml  GestureThreshold.xml  ROI.xml
dat/HandGesture/: 0.xml  1.xml  2.xml  3.xml  4.xml  5.xml  6.xml  8.xml  9.xml  BinaryFilter.xml  CvRGBCamera.xml  GestureThreshold.xml  ROI.xml
modules/CmdLine/include/: CmdLine.h
modules/CmdLine/src/: CmdLine.cpp
modules/CvRGBCamera/: CMakeLists.txt
modules/CvRGBCamera/include/: CvRGBCamera.h
modules/CvRGBCamera/src/: CvRGBCamera.cpp
modules/Distribution/: CMakeLists.txt
modules/Distribution/include/: Distribution.h
modules/Distribution/src/: Distribution.cpp
modules/Draw/: CMakeLists.txt
modules/Draw/include/: Draw.hpp
modules/Draw/src/: Draw.cpp
modules/HandTracking/: CMakeLists.txt
modules/HandTracking/include/: HandTracking.h
modules/HandTracking/src/: HandTracking.cpp
modules/ScreenTool/: CMakeLists.txt
modules/ScreenTool/include/: ScreenTool.h
modules/ScreenTool/src/: ScreenTool.cpp
modules/VirtualInput/include/: VirtualInput.h
modules/VirtualInput/src/: VirtualInput.cpp
modules/XMLTool/: CMakeLists.txt
modules/XMLTool/include/: XMLTool.h
modules/XMLTool/src/: XMLTool.cpp
src/: HandGesture.cpp  ROI.cpp  receive_uinput.cpp  send_uinput.cpp  tran.cpp
tmp_build/: CMakeCache.txt  Makefile  cmake_install.cmake
tmp_build/modules/CmdLine/: Makefile  cmake_install.cmake
tmp_build/modules/CvRGBCamera/: Makefile  cmake_install.cmake
tmp_build/modules/Distribution/: Makefile  cmake_install.cmake
tmp_build/modules/Draw/: Makefile  cmake_install.cmake
tmp_build/modules/ScreenTool/: Makefile  cmake_install.cmake
tmp_build/modules/VirtualInput/: Makefile  cmake_install.cmake
tmp_build/modules/XMLTool/: Makefile  cmake_install.cmake
tmp_src/: GSL_test.cpp  HandGestureROI.cpp  RGB_camera_main.cpp  XML_test.cpp  cl_performance_test1.cpp  cl_performance_test2.cpp  gesture.cpp  getopt.cpp  main.cpp  pipe_input.cpp  pipe_output.cpp  receive_pos.cpp  test_OpenCV.cpp  virtualinput_main.cpp
